# Djinn

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  output.txt
djinn/: CMakeLists.txt  djinn_lib.txt
djinn/include/: rlFPCamera.h  rlHelper.h
djinn/include/djinn/: core.h  numerical.h  particle.h  pfgen.h  plinks.h  potgen.h  pworld.h  tooling.h
djinn/lib/djinn/: libdjinn.dylib
djinn/src/: numerical.cpp  particle.cpp  pfgen.cpp  plinks.cpp  potgen.cpp  pworld.cpp  rlFPCamera.cpp  rlHelper.cpp  tooling.cpp
djinn/src/demos/: RK4ND.cpp  bouncyball  bouncyball.cpp  libdjinn.dylib  lunarorbit  lunarorbit.cpp  solarsystem  solarsystem.cpp  springmass  springmass.cpp  thermo.cpp
include/djinn/: particle.h  pcontacts.h  pfgen.h  plinks.h  precision.h
include/engine/: core.h  particle.h  pfgen.h  precision.h
src/: particle.cpp  pcontacts.cpp  pfgen.cpp  playground.cpp  plinks.cpp  rlFPCamera.cpp  rlHelper.cpp
src/demos/: bouncyball.cpp  graphicstest  graphicstest.cpp  lunarorbit  lunarorbit.cpp  lunarorbitNew  solarsystem  solarsystem.cpp  springmass  springmass.cpp
src/demos/ballistic/: ballistic.cpp
src/demos/graphicstest.dSYM/Contents/: Info.plist
src/demos/graphicstest.dSYM/Contents/Resources/DWARF/: graphicstest
src/demos/lunarorbit.dSYM/Contents/: Info.plist-e
src/demos/lunarorbit.dSYM/Contents/Resources/DWARF/: lunarorbit
src/demos/lunarorbitNew.dSYM/Contents/: Info.plist
src/demos/lunarorbitNew.dSYM/Contents/Resources/DWARF/: lunarorbitNew
src/demos/solarsystem.dSYM/Contents/: Info.plist
src/demos/solarsystem.dSYM/Contents/Resources/DWARF/: solarsystem
src/demos/springmass.dSYM/Contents/: Info.plist
src/demos/springmass.dSYM/Contents/Resources/DWARF/: springmass
